--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "flowbite": "^2.5.1",
+    "framer-motion": "^12.0.0",
     "lucide-react": "^0.471.0",
     "mongose": "^0.0.2-security",
     "nodemon": "^3.1.7",
